Arreglamos errores en el diagrama de clases y mejoro el metodo de segmentarDonacion